force-app/main/default/objects/Engagement_Signal__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>이 관심 신호가 어떤 Sponsorship Campaign에 귀속되는지</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Engagement Signals</relationshipLabel>
    <relationshipName>Engagement_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>