force-app/main/default/objects/Engagement_Signal__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>해당 관심 신호를 보인 팬의 이름</description>
    <inlineHelpText>해당 관심 신호를 보인 팬의 이름</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Signals (Fan)</relationshipLabel>
    <relationshipName>Engagement_Signals1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>