force-app/main/default/objects/Engagement_Signal__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>관심 신호가 특정 선수와 관련된 경우 해당 선수(Contact의 Player 레코드)를 참조 (예: &apos;문선수&apos; 영상)</description>
    <inlineHelpText>관심 신호가 특정 선수와 관련된 경우 해당 선수(Contact의 Player 레코드)를 참조 (예: &apos;문선수&apos; 영상)</inlineHelpText>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Signals</relationshipLabel>
    <relationshipName>Engagement_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>