force-app/main/default/objects/Engagement_Signal__c/fields/Signal_Date__c.field-meta.xml
<CustomField>
    <fullName>Signal_Date__c</fullName>
    <description>관심 신호가 발생한 날짜와 시간을 기록하는 필드(팬의 Engagement Signal 중 가장 최근 Signal Date를 Fan Profile 화면에서 &apos;최근 활동일&apos;로 보여줌.)</description>
    <inlineHelpText>관심 신호가 발생한 날짜와 시간을 기록하는 필드</inlineHelpText>
    <label>Signal Date</label>
    <type>DateTime</type>
</CustomField>