force-app/main/default/objects/Engagement_Signal__c/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <description>팬이 보인 관심 신호의 종류를 기록</description>
    <inlineHelpText>팬이 보인 관심 신호의 종류를 기록</inlineHelpText>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNS Click</fullName>
            </value>
            <value>
                <fullName>Video View</fullName>
            </value>
            <value>
                <fullName>App Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>